--- a/gb/24/5/31/n14261230.md
+++ b/gb/24/5/31/n14261230.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>大陆中年“失业三宝” 其中一宝面临消失风险</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>大陆中年失业三宝 其中一宝不灵了</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/05/id14261373-w-600x400.png" />
 <h6>图为大陆网约车司机。（视频截图）
 </h6>
@@ -9,7 +9,7 @@
 	<p>【大纪元2024年05月31日讯】（大纪元记者方晓报导）中国经济恶化，各行各业陷入萧条，导致大量人员失业。外卖、快递、网约车是几乎没有门槛的行业，成为中年失业人员首选的赚钱途径，被大陆人称为“中年失业三宝”。不过由于人员供大于求等原因，这些行业愈来愈难做。近日大陆社交媒体流传，网约车行业面临消失风险。这令失业人员的生活压力愈来愈大。</p>
 <h2>网约车供过于求 多地发预警</h2>
 <p>网约车被列入中年失业三宝之一有其原因，除了会开车以外，毋须专业技能，只要有一辆私家车便可接单赚钱。不少中年人士失业后很难找到新工作，便在滴滴、高德等平台上登记为司机，每日出车拉人赚生活费。</p>
-<p>然而，投入网约车的人员越来越多，加上大陆民众消费降级，不少人宁愿多走几步路去搭巴士或地铁也不打车了，导致网约车行业供过于求。每个司机每日获分派的订单越来越少。有些平台日均接单量连1000单都不到，很多地方的司机每天跑不到20单，客单价也只有十几元，单车日均收入只有200多元（人民币，下同），根本入不敷出。</p>
+<p>然而，投入网约车的人员越来越多，加上大陆民众消费降级，不少人宁愿多走几步路去搭巴士或地铁也不打车了，导致网约车行业供过于求。每个司机每日获分派的订单越来越少。有些平台日均接单量连1000单都不到，很多地方的司机每天跑不到20单，客单价也只有十几元，单车日均收入只有二百多元（人民币，下同），根本入不敷出。</p>
 <p>今年以来，中国多地发布网约车行业风险预警，提醒司机慎跑网约车，因为司机和平台数量已经彻底饱和。包括江苏、江西、福建、重庆等地方政府，近日相继针对网约车发出“行业风险预警”。</p>
 <p>江苏苏州4月12日发出风险通知称，全市有执照的网约车共计71,944辆，一季度日均接单量仅15单，单车日均收入350元，城区只有335元。</p>
 <p>4月16日，重庆发布风险通知称，一季度单车日均只能接到13.6单，日均营收约321元，这还没剔除平台流水抽成、订单信息服务费等。</p>
@@ -20,36 +20,43 @@
 <p>北京一名80后专车女司机“女王陛下”5月30日发视频表示，自己之前开网约车3年，现在转为开专车有几个月了，最大体验也是单太少了，专车比普通网约车的单更少，只有在特殊天气下情况还好。总而言之，哪个都不好干。</p>
 <p>民众认为，中年失业的另外“两宝”——送外卖、跑快递与网约车一样，都面对供应过剩和订单不足的问题，令靠这两个行业赚钱的失业人员很艰难。大陆中年人的“失业三宝”都面临严重挑战。</p>
 <p>责任编辑：林琮文#</p>
+<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/5/12/n14247123.md#1?utm_term=djy_a_rel_end_1" target="_blank" rel="noopener noreferrer">今年悲惨排行榜热传 失业青年：走向深渊</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/21/7/18/n13097858.md#1?utm_term=djy_a_rel_end_1" target="_blank" rel="noopener noreferrer">滴滴储存了哪些数据 令中共惊恐</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/5/19/n14000584.md#1?utm_term=djy_a_rel_end_1" target="_blank" rel="noopener noreferrer">中国失业大军涌入 网约车业人满为患</a></span></li>
+</ul>
 	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/11/n14013978.md#1">网约车市场供过于求?山东41司机抢1单</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14242323.md#1">大陆硕博生人数惊人 专家：推迟毕业仍失业</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/22/n14255895.md#1">预测失业峰值未至 将再有26,000人失业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261173.md#1">三退声明精选（2024/05/30）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283942.md#1">【菁英论坛】官场为何真假难辩 假派出所的启示</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/27/n10430861.md#1" target="_blank">新闻奇才拒赴台湾 命丧中共劳改营</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/4/n10688678.md#1" target="_blank">摆脱人生困境 美国女子重拾幸福</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/3/n14239818.md#1">苏轼相交一世的表亲知己：墨竹画家文同</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/24/n14256907.md#1">前美军上校：外星人确实存在 并与人类互动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/24/n14256721.md#1">【未解之谜】灵魂驻扎的地方 中医揭秘：心脏才是人体总指挥？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/22/n14255214.md#1">一个空间通连两个时空 奇特梦境竟然真实不虚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/29/n14236475.md#1">捉迷藏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/29/n14259871.md#1">【晚间新闻】美智库：中共侵台将露底牌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/29/n14260271.md#1">【菁英论坛】反习派 鼓动习攻台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234857.md#1">【思想领袖】伪装成“反假信息”的审查制度</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/29/n14259855.md#1">南京首家Costco开业 三个爱马仕包秒光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/29/n14260064.md#1">百座烂尾楼被央视曝光 天津官场谁做替罪羊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/28/n14258892.md#1">《蜘蛛夫人》美国Netflix上映后 登榜首一周</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/27/n14258843.md#1">曾连吃30天麦当劳爆红 《麦胖报告》导演癌逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/29/n14260343.md#1">《庆余年2》爆红 张若昀唐艺昕爱情秘辛曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/28/n14259605.md#1">名导张健被强制执行2千万 曾被儿子张若昀起诉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/28/n14259703.md#1">知名陆综传意外 多名参赛者骨折 节目组不赔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/29/n14260000.md#1">专家警告 别用白醋和小苏打粉疏通堵塞水管</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/27/n14258698.md#1">这20种“放不坏”的食材 值得每个厨房储备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/28/n14259266.md#1">9种石油制造的日常用品 你可能不知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/29/n14260340.md#1">营养师：这些是商店货架上最健康的奶制品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/25/n14257434.md#1">82岁工作仍精力充沛 日营养师47年吃1种长寿食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/5/31/n14261230.htm">大陆中年“失业三宝” 其中一宝面临消失风险</a></p><hr>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/5/31/n14261230.htm">大陆中年失业三宝 其中一宝不灵了</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261230.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
