--- a/gb/24/5/31/n14261784.md
+++ b/gb/24/5/31/n14261784.md
@@ -9,13 +9,19 @@
 	<p>【大纪元2024年06月01日讯】（大纪元记者钟又淳报导）稍早前传出已移居香港的大陆女星范冰冰，日前在社交平台晒出半山豪宅的外景。而视频中的另一画面显示，其豪宅内柜子里存有不少乌龙茶，表明范冰冰已融入香港。</p>
 <p>范冰冰因2018年卷入税务风波遭封杀，迄今一直没有影视作品能在内地上映。近年活跃于国际影展和时装周的她，也频频赴港参加派对与友人聚会。前不久有传范冰冰已移民香港定居，并进驻许多富豪、明星青睐的半山豪宅区，打进香港贵妇圈。</p>
 <p>5月31日，范冰冰在小红书分享一则视频，正式曝光其半山豪宅。视频显示，刚起床的范冰冰在大露台拍片，俯瞰维多利亚港的景色，并说：“阴天还是很美的，有它自己的味道吧！”</p>
-<figure id="attachment_14261805" aria-describedby="caption-attachment-14261805" style="width: 320px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14261805-fan-bb-01.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-14261805" src="https://i.epochtimes.com/assets/uploads/2024/06/id14261805-fan-bb-01.jpg" alt="" width="320" b="659" /></a><figcaption id="caption-attachment-14261805" class="wp-caption-text">范冰冰5月31日晒香港半山豪宅外景。（小红书截图）</figcaption></figure>
+<figure id="attachment_14261805" aria-describedby="caption-attachment-14261805" style="width: 320px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14261805-fan-bb-01.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="size-full wp-image-14261805" src="https://i.epochtimes.com/assets/uploads/2024/06/id14261805-fan-bb-01.jpg" alt="" width="320" b="659" /></a><figcaption id="caption-attachment-14261805" class="wp-caption-text">范冰冰5月31日晒香港半山豪宅外景。（小红书截图）</figcaption></figure>
 <p>据“香港01”报导，范冰冰的新住所是过亿港元的半山豪宅，豪宅可俯瞰180度的维多利亚港景色，这代表范冰冰的资产丰厚，仍享受着高品质的生活。</p>
 <p>曾是大陆一线女星的范冰冰，6年前因偷漏税遭官方罚款逾8.8亿人民币，如日中天的演艺事业骤然停摆。交完罚款后一直在复出边缘挣扎的她，近年改变对策，将事业重心转向香港、韩国甚至欧美。</p>
-<p>据香港“东网”披露，范冰冰定居香港其实有迹可寻。去年她就常被拍到出现在香港街头，今年初她又与父母一同在游艇上欣赏维港夜景共度除夕，之后还被拍到现身品牌店扫货，前不久还为在香港举行的亚洲电影大奖担任颁奖嘉宾。</p>
-<figure id="attachment_14261807" aria-describedby="caption-attachment-14261807" style="width: 320px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14261807-fan-bb-02.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-14261807" src="https://i.epochtimes.com/assets/uploads/2024/06/id14261807-fan-bb-02.jpg" alt="" width="320" b="659" /></a><figcaption id="caption-attachment-14261807" class="wp-caption-text">范冰冰5月31日晒香港半山豪宅内景。（小红书截图）</figcaption></figure>
+<p>据香港“东网”披露，范冰冰定居香港其实有迹可寻。去年她就常被拍到出现在香港街头，今年初她又与父母一同在游艇上欣赏维港夜景共度除夕，之后还被拍到现身品牌店扫货，前不久还为在香港举行的亚洲电影大奖担任颁奖嘉宾。（<strong>先前报导：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/3/12/n14200953.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener noreferrer">与港星合影不敢发？范冰冰晒与李英爱合照</a></span></strong>）</p>
+<figure id="attachment_14261807" aria-describedby="caption-attachment-14261807" style="width: 320px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14261807-fan-bb-02.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="size-full wp-image-14261807" src="https://i.epochtimes.com/assets/uploads/2024/06/id14261807-fan-bb-02.jpg" alt="" width="320" b="659" /></a><figcaption id="caption-attachment-14261807" class="wp-caption-text">范冰冰5月31日晒香港半山豪宅内景。（小红书截图）</figcaption></figure>
 <p>从此次范冰冰释出的视频中可见，其豪宅装潢以简洁为主，但浴室颇显奢华，猜测可能与范冰冰做美容直播有关。而从豪宅内的一个柜子中发现，范冰冰收藏了不少香港最受欢迎的乌龙茶，显示她已融入香港。</p>
 <p>责任编辑：杨明</p>
+<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/1/23/n13524591.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">“穿了新衣搬了新公司” 范冰冰晒照曝近况</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href="https://github.com/1992513/djy/blob/master/gb/18/9/20/n10729156.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">神秘失踪逾百日 范冰冰与李晨同时“现身”</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href="https://github.com/1992513/djy/blob/master/gb/18/7/30/n10601960.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">卷逃税风波疑代言不保 范冰冰暴瘦照片曝光</a></span></li>
+</ul>
 	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/19/n14162267.md#1">范冰冰再闯好莱坞 同框威尼斯影帝连姆·尼森</a></li>
@@ -24,29 +30,29 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/29/n14237153.md#1">范冰冰突晒一“定情物” 引发复合李晨猜测</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/31/n11489359.md#1" target="_blank">法轮功洪传欧洲 多族裔民众：找到生命意义</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11010874.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/1/n11424700.md#1" target="_blank">罗兰：中共公安何以成公害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/3/n14239818.md#1">苏轼相交一世的表亲知己：墨竹画家文同</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258805.md#1">【未解之谜】遇难总能呈祥？盘点蒋介石身边的那些高人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/22/n14255214.md#1">一个空间通连两个时空 奇特梦境竟然真实不虚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/23/n14256005.md#1">迟到了半个世纪的“毕业纪念册”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/26/n14258095.md#1">【庆祝5·13】普天敬颂谢师恩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260876.md#1">【百年真相】黄万里为何被毛指脑后长“反骨”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261793.md#1">【新闻五人行】小粉红出国才知道 美国人什么样</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261285.md#1">【远见快评】刘源被查上交20亿 红二代给习下套</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260400.md#1">辞高薪工作 美国妈妈改做副业 年赚37.9万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260566.md#1">世界最高的烂尾楼？天津117大厦引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260490.md#1">三中全会前中共五常委接见警察 被指气氛紧张</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260343.md#1">《庆余年2》爆红 张若昀唐艺昕爱情秘辛曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259703.md#1">知名陆综传意外 多名参赛者骨折 节目组不赔</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14261029.md#1">蔡少芬趁低价购香港豪宅 原业主7年亏近千万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260405.md#1">主打吴孟达遗作画面却不到1分钟 片方遭痛批</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14261083.md#1">演员杜旭东被爆为电诈拍广告 涉案金额上亿元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260000.md#1">专家警告 别用白醋和小苏打粉疏通堵塞水管</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260340.md#1">营养师：这些是商店货架上最健康的奶制品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/25/n14257434.md#1">82岁工作仍精力充沛 日营养师47年吃1种长寿食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/24/n14256815.md#1">突然手脚发麻？小心是先兆！7食物清血管防中风</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260691.md#1">这9个无心的习惯会偷偷消耗你的能量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/5/31/n14261784.htm">范冰冰晒半山豪宅 柜中饮品显示她已移居香港</a></p><hr>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/5/31/n14261784.htm">范冰冰晒半山豪宅 柜中饮品显示她已移居香港</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261784.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
